# kff-rust-api

./: .copier-answers.yml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Readme.md  book.toml  crates.js  help.html  release-plz.toml  search-index.js  settings.html  source-files.js  src-files.js  tarpaulin.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug.md.jinja  config.yml.jinja
.github/workflows/: format.yml  lints.yaml  main.yml  msrv.yaml  msrv.yml  test.yml  tests.yaml  website.yaml
examples/: index_read.rs  kff.rs  kff2kmer.rs  kmer_count2kff.rs
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  (+1 more)
kff/: all.html  index.html  sidebar-items.js
kff/data/: index.html  sidebar-items.js  trait.Reader.html  trait.Writer.html
kff/error/: enum.Data.html  enum.Error.html  enum.Header.html  enum.Kff.html  enum.Minimizer.html  enum.Variables.html  index.html  sidebar-items.js  trait.LocalResult.html  type.Result.html
kff/iterator/: index.html  sidebar-items.js  struct.KmerIterator.html
kff/kff/: index.html  sidebar-items.js  struct.Kff.html  struct.Reader.html  struct.Writer.html
kff/kmer/: index.html  sidebar-items.js  struct.Kmer.html
kff/minimizer/: index.html  sidebar-items.js  struct.Reader.html  struct.Writer.html
kff/raw/: index.html  sidebar-items.js  struct.Reader.html  struct.Writer.html
kff/section/: index.html  sidebar-items.js
kff/seq2bits/: index.html  sidebar-items.js  trait.Bits2Nuc.html  trait.Nuc2Bits.html  trait.RangeNuc.html  type.Seq2Bits.html  type.Seq2Slice.html
kff/utils/: index.html  sidebar-items.js  type.BitBox.html  type.BitOrd.html  type.BitSlice.html  type.BitVec.html  type.Order.html
kff/variables/: index.html  sidebar-items.js  trait.Reader.html  trait.Variables1.html  trait.Writer.html  type.Variables.html
search.desc/kff/: kff-desc-0-.js
src/: data.rs  encoding.rs  error.rs  header.rs  io.rs  iterator.rs  kff.rs  kmer.rs  lib.rs  metadata.rs  minimizer.rs  raw.rs  read.rs  section.rs  seq2bits.rs  utils.rs  variables.rs
src/kff/: data.rs.html  error.rs.html  iterator.rs.html  kff.rs.html  kmer.rs.html  lib.rs.html  minimizer.rs.html  raw.rs.html  section.rs.html  seq2bits.rs.html  utils.rs.html  variables.rs.html
src/read/: iterator.rs  kff.rs
src/section/: block.rs  header.rs  index.rs  minimizer.rs  raw.rs  values.rs
src/utils/: global_index.rs  kmer.rs  read.rs  write.rs
tests/: basic_file.rs  index_read.rs  kff2kmers.rs  kmer_count2kff.rs  read_minimizer.rs  read_write.rs  write_mini.rs
tests/data/: example.kff  example_TCGA.kff  index.kff  kmer_count.csv  kmers2kff.kff  m_1.kff  r_0.kff  test.kff
website/: SUMMARY.md  code_coverage.md  license.md  read.md  readme.md  write.md
(+79 files in other folders)
