[package]
name = "kff"
version = "0.9.0"
authors = ["Pierre Marijon <pierre@marijon.fr>"]
edition = "2021"
description = "Kmer File Format Rust parser"
rust-version = "1.62"

homepage = "https://github.com/natir/kff"
repository = "https://github.com/natir/kff"
documentation = "https://natir.github.io/kff/kff"

readme = "Readme.md"
license-file = "LICENSE"

exclude = [
	".copier-answers.yml",
	".github/*"
]


[dependencies]
# Error management
thiserror      = { version = "1" }

# Logging management
log            = { version = "0.4" }

getset         = { version = "0.1" }

rustc-hash     = { version = "2" }

bitvec         = { version = "1" }


[dev-dependencies]
# CLI management
clap           = { version = "4", features = ["derive"] }

# Logging management
stderrlog      = { version = "0.6" }

# Profiling
criterion      = { version = "0.5" }

rand           = { version = "0.8" }
tempfile       = { version = "3" }


[profile.release]
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false


[profile.profiling]
inherits = "release"
debug = true